--- a/css/style.css
+++ b/css/style.css
@@ -6,32 +6,25 @@ body {
   font-family: "Roboto", sans-serif;
   font-size: 14px;
   color: #333;
-  margin: 0;
   background: #fcc302;
-}
-
-a {
-  color: inherit;
+  margin: 0;
 }
 
 header {
-  height: 100vh;
-  padding: 10px;
-  display: flex;
-  flex-direction: column;
-  background: center center fixed;
-  background-size: cover;
-  background-image: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)),
-    url("/img/splash.png");
+  position: absolute;
+  width: 100%;
+  padding: 20px 0;
 }
 
 nav {
   display: flex;
   justify-content: space-between;
+  flex-wrap: wrap;
+  padding: 0 50px;
 }
 
 #logo {
-  width: 150px;
+  width: 50%;
   border-radius: 5px;
   box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.5);
 }
@@ -39,8 +32,8 @@ nav {
 header nav a {
   color: #fff;
   text-decoration: none;
-  font-size: 1.5rem;
-  padding: 10px;
+  font-size: 20px;
+  margin: 0 15px;
 }
 
 header nav a:hover {
@@ -59,15 +52,19 @@ ul li {
 
 iframe {
   max-width: 400px;
-  max-height: 200px;
 }
 
 #heroContainer {
+  height: 100vh;
   display: flex;
   flex-direction: column;
   align-items: center;
   justify-content: center;
   flex: auto;
+  background: center center fixed;
+  background-size: cover;
+  background-image: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)),
+    url("/img/splash.png");
 }
 
 #cardsContainer {
