--- a/css/style.css
+++ b/css/style.css
@@ -19,12 +19,11 @@ header {
 nav {
   display: flex;
   justify-content: space-between;
-  flex-wrap: wrap;
   padding: 0 50px;
 }
 
 #logo {
-  width: 50%;
+  width: 150px;
   border-radius: 5px;
   box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.5);
 }
@@ -51,7 +50,8 @@ ul li {
 }
 
 iframe {
-  max-width: 400px;
+  min-width: 500px;
+  min-height: 200px;
 }
 
 #heroContainer {
@@ -59,7 +59,7 @@ iframe {
   display: flex;
   flex-direction: column;
   align-items: center;
-  justify-content: center;
+  justify-content: flex-end;
   flex: auto;
   background: center center fixed;
   background-size: cover;
