--- a/css/style.css
+++ b/css/style.css
@@ -18,6 +18,7 @@ header {
 
 nav {
   display: flex;
+  flex-wrap: wrap;
   justify-content: space-around;
   padding: 0 50px;
 }
@@ -50,8 +51,8 @@ ul li {
 }
 
 iframe {
-  min-width: 400px;
-  min-height: 200px;
+  width: 100%;
+  height: 400px;
 }
 
 #heroContainer {
