--- a/css/style.css
+++ b/css/style.css
@@ -20,7 +20,7 @@ nav {
   display: flex;
   flex-wrap: wrap;
   justify-content: space-around;
-  padding: 0 50px;
+  padding: 0;
 }
 
 #logo {
@@ -29,21 +29,20 @@ nav {
   box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.5);
 }
 
-header nav a {
+nav ul {
+  padding: 0;
+  margin: 0;
+}
+
+nav li a {
   color: #fff;
   text-decoration: none;
-  font-size: 20px;
-  margin: 0 15px;
+  font-size: 25px;
+  padding: 0 10px;
 }
 
 header nav a:hover {
   font-weight: bold;
-}
-
-ul {
-  margin: 0;
-  padding: 0;
-  list-style: none;
 }
 
 ul li {
@@ -57,6 +56,7 @@ iframe {
 
 #heroContainer {
   height: 100vh;
+  min-width: fit-content;
   display: flex;
   flex-direction: column;
   align-items: center;
